[package]
name = "assetbundleextractor"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
iced = { version = "0.13", features = ["advanced"] }
rfd = "0.15"
numeric-sort = "0.1"
async-channel = "2.3"
open = "5.3"
rabex = { git = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor", branch = "bundlefile-streaming" }

[profile.dev.package."*"]
opt-level = 2
