[package]
name = "assetbundleextractor"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "89f480", default-features = false, features = [
    "advanced",
    "tiny-skia",
    "fira-sans",
    "thread-pool",
] }
rfd = "0.15"
numeric-sort = "0.1"
async-channel = "2.3"
open = "5.3"
rabex = { git = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor", branch = "all" }

[profile.dev.package."*"]
opt-level = 2
